fix : Z-indexの修正

--- a/src/app/ui-domain/Header/style.module.scss
+++ b/src/app/ui-domain/Header/style.module.scss
@@ -4,6 +4,7 @@
   height: 72px;
   width: 100%;
   background-color: var(--orange);
+  z-index: 999;
 
   .container {
     display: flex;
